--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "start:dev": "ng serve -c=dev",
+    "start:dev": "ng serve -c=development",
     "build": "ng build",
     "lint": "ng lint"
   },
